--- a/index.html
+++ b/index.html
@@ -145,31 +145,8 @@
                 <table class="container" align="center" bgcolor="#ffffff" cellpadding="0" cellspacing="0" role="presentation" width="600">
                     <tr>
                         <td style="background-color: #ffffff;padding: 10%">
-                            <p contenteditable="true" style="font-family: Arial, Helvetica, sans-serif; font-size: 18px; font-weight: 600;text-align: left;">CLIENT,</p>
-                            <p contenteditable="true" style="line-height: 20px;">I’m excited to get working on getting CLIENT up to speed with their web presence and putting a plan in place for the future of your digital voice.</p>
-
-                            <p contenteditable="true" style="line-height: 20px;font-family: Arial, Helvetica, sans-serif; font-size: 18px; font-weight: 600; color: #000;text-align: left;">First lets get a few things out of the way...</p>
-
-                            <ol contenteditable="true" style="line-height: 20px;">
-                                <li contenteditable="true">Attached is a signed copy of your proposal, please return it with your signature- Just to keep things professional<br>
-                                    <span contenteditable="true" style="font-weight: 600;color:#000;">TIP:</span> <a style="text-decoration: none; color:#4398b5;" href="https://www.macrumors.com/how-to/digitally-sign-a-pdf-using-preview-on-mac/">How to digitally sign your proposal</a></li>
-                                <li contenteditable="true">You’ll receive an invoice for your deposit- it can be paid directly from the invoice</li>
-                                <li contenteditable="true"><a style="text-decoration: none; color:#4398b5;" href="https://calendly.com/chris-521/">Schedule a project kickoff meeting</a></li>
-                            </ol>
-
-
-                            <p contenteditable="true" style="line-height: 20px; font-family: Arial, Helvetica, sans-serif; font-size: 18px; font-weight:600; color: #000;text-align: left;">Why Do I need a Kickoff Meeting?</p>
-                            <ul contenteditable="true" style="line-height: 20px;">
-                                <li contenteditable="true">We <strong>identify</strong> high priority action items and set a project roadmap</li>
-                                <li contenteditable="true">We <strong>collaborate</strong> on project specifics, goals, outcomes and overall direction</li>
-                                <li contenteditable="true">We <strong>deliver</strong> answers to questions, discuss strategies, and address concerns</li>
-
-                            </ul>
-
-                            <p contenteditable="true" style="line-height: 20px; font-family: Arial, Helvetica, sans-serif; font-size: 18px; font-weight: 600; color: #000;text-align: left;">Do I Need Anything Else?</p>
-
-                            <p contenteditable="true" style="line-height: 20px;">Nope! My information is below, and you can reach out any time by using the <a style="text-decoration: none; color:#4398b5;" href="https://calendly.com/chris-521/">Schedule a Meeting</a> feature or through email. We’re looking forward to helping CLIENT reach its goals and are excited to be working together. </p>
-                            <span contenteditable="true" style="line-height: 20px; font-family: Arial, Helvetica, sans-serif; font-size: 18px; font-weight: 600;text-align: right;">Let’s get going!</span>
+                            <p content-editable="true">Dear Reader,</p><br>
+                            <p content-editable="true">I hope this message finds you well.</p><br>
                         </td>
                     </tr>
                 </table>
